--- a/action.yml
+++ b/action.yml
@@ -5,66 +5,29 @@ branding:
   icon: 'at-sign'
   color: 'blue'
 
-on:
-  pull_request:
-    types:
-      - review_requested
-
-# env:
-#   slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
-#   github_token: ${{ secrets.GITHUB_TOKEN }}
-#   github_repository: ${{ github.repository }}
-#   github_event_pull_request_number: ${{ github.event.pull_request.number }}
-#   reviewer_to_slack_json_path: ./.github/workflows/slack_notice/reviewer_to_slack.json
-
-# jobs:
-#   notice:
-runs-on: ubuntu-18.04
-steps:
-  - name: checkout
-    uses: actions/checkout@v2.1.0
-
-  - name: get_reviewer_to_slack_json
-    # json is mapping github-users-login to <@slack-memberid>
-    run: echo ::set-env name=reviewer_to_slack_json::$(cat ${reviewer_to_slack_json_path})
-
-  - name: fetch_requested_reviewers
-    run: |
-      requested_reviewers_tmp=$(curl -H "Authorization: token ${github_token}" https://api.github.com/repos/${github_repository}/pulls/${github_event_pull_request_number}/requested_reviewers)
-      requested_reviewer_users=$(echo ${requested_reviewers_tmp} | jq -r .users)
-      num_reviewer=$(echo ${requested_reviewer_users} | jq length)
-
-      echo ::set-env name=requested_reviewer_users::$(echo ${requested_reviewer_users})
-      echo ::set-env name=num_reviewer::$(echo ${num_reviewer})
-      
-      echo ${requested_reviewers_tmp}
-
-  - name: make_text_for_slack
-    run: |
-      if test ${num_reviewer} -ge 1; then
-        text_for_slack='https://github.com/${github_repository}/pull/${github_event_pull_request_number} \n'
-        
-        for i in $( seq 0 $((${num_reviewer}-1)) )
-        do
-            login=$(echo ${requested_reviewer_users} | jq -r .[$i].login)
-            slack_user_id=$(echo ${reviewer_to_slack_json} | jq -r ".[\"${login}\"]")
-            echo "${login}:${slack_user_id}"
-
-            text_for_slack="${text_for_slack}${slack_user_id} "
-        done
-
-        text_for_slack="${text_for_slack} :review: "
-        echo ::set-env name=text_for_slack::$(echo ${text_for_slack})
-        
-        echo ${text_for_slack}
-      fi
-
-  - name: slack_notice
-    run: |
-      if test ${num_reviewer} -ge 1; then
-        text_json="{ \"text\": \"${text_for_slack}\" }"
-        curl -s -X POST \
-            -H 'Content-Type: application/json' \
-            -d "${text_json}" \
-            ${slack_webhook_url}
-      fi
+inputs:
+  configuration_path:
+    description: 'A path for the mapping reviewer to slack configuration'
+    default: '.github/workflows/slack_notice/reviewer_to_slack.json'
+  github_token: 
+    description: 'operation token'
+    default: ${{ github.token }}
+  github_repository:
+    description: 'operation repository'
+    default: ${{ github.repository }}
+  github_event_pull_request_number:
+    description: 'operation pull request number'
+    default: ${{ github.event.pull_request.number }}
+  slack_webhook_url:
+    description: 'slack webhook token'
+    required: true
+  
+runs:
+  using: 'docker'
+  image: 'Dockerfile'
+  args:
+    - ${{ inputs.configuration_path }}
+    - ${{ inputs.github_token }}
+    - ${{ inputs.github_repository }}
+    - ${{ inputs.github_event_pull_request_number }}
+    - ${{ inputs.slack_webhook_url }}
